sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:5: error: ')' expected but '.' found.
		for(i<-0 to .length-2){
                            ^AlgBubbleSort1:11: error: illegal start of simple expression
	}
        ^