sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
	var x=1
	while (x!=0){
		for(i<-0 to .length-2){
			if (plusPetitQue(i+1,i)==true){
				echange(i+1,i)
				x=x+1
			}
		}
	}
}
